game-servers-exposure/overlays/prd-apps/windrose-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: windrose-gateway
  labels:
    app.kubernetes.io/name: windrose-server
    app.kubernetes.io/component: envoy-gateway
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.14.186
  listeners:
    - name: game-tcp
      protocol: TCP
      port: 7777
      allowedRoutes:
        namespaces:
          from: Same
    - name: game-udp
      protocol: UDP
      port: 7777
      allowedRoutes:
        namespaces:
          from: Same
    - name: dashboard
      protocol: TCP
      port: 8780
      allowedRoutes:
        namespaces:
          from: Same
